--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,7 @@
         <textarea class="u-full-width" type="text" id="content" name="content"></textarea>
         <button class="button-primary">Send your Chat!</button>
       </form>
+      <div class="messages"></div>
     </main>
     <script src="client.js"></script>
   </body>
